Created central template system

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Example</title>
+    <link rel = "stylesheet" type = "text/css" href = "main.css">
     <link rel = "stylesheet" type = "text/css" href = "index.css">
   </head>
 
@@ -21,6 +22,14 @@
       </div>
     </div>
     <div id = "contentArea">
+      <h2>The Beginning of a Great Porn Site...</h2>
+      <p>This year, we will switch the lights on for our
+      new project, The Tentacle Project. The Tentacle
+      Project is being made to provide pornographic
+      material to everyone, free of bandwidth and CPU
+      hogging advertisements. Unlike Pornhub.com and
+      Redtube.com, our site provides a safe way to
+      watch and download great porn at no downsides.</p>
     </div>
   </body>
 </html>
