Added nav bar. Changed colors.

--- a/init/index.html
+++ b/init/index.html
@@ -7,13 +7,22 @@
     </head>
 
     <body>
-        <div id="top-header">
-            <div id="left-header-float">
-                <h1>PornSite.com</h1>
-            </div>
-            <div id="right-header-float">
+        <div id="content">
+            <header>
+                <div id="left-header">
+                    <h1>Pr0nSite.com</h1>
+                </div>
 
-            </div>
+                <div id="right-header">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Videos</a></li>
+                            <li><a href="#">Upload</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
         </div>
     </body>
 </html>
