--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Project Tentacles</title>
+        <title>Project Tentacles - Home</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
 
